--- a/css estilos/estilos.css
+++ b/css estilos/estilos.css
@@ -10,72 +10,12 @@
     font-family: 'Ubuntu', sans-serif;
 }
 
-.contenedor{
-    height: 150vh;
-    width: auto;
-    display: grid;
-    grid-template-areas: 
-    "header header header" 
-    "main main" "aside"
-    "footer footer footer";
-    column-gap: 10px;
-
+header{
+    background-color: rgba(202, 180, 228, 0.829);
 }
-
-.header{
-    background-color: rgb(178, 174, 182);
-    height: 20vh;
-    text-align: center;
-    color:rgb(83, 24, 83);
-    display:grid;
-    grid-template-columns: 1fr 1.5fr 0.5fr;
-    grid-template-rows: auto 3fr;
-    align-items: center;
-    grid-column: 1 / 4;
-    grid-row: 1 / 2;
-    
-}
-
-.header__logo{
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    padding-top: 10px;
-}
-
-.nav{
-    grid-column: 2 / 4;
-    grid-row: 1 / 2;
-    padding-top: 10px;
-    align-self: start;
-}
-
-.nav__enlaces{
-    display: flex;
-    font-weight: bold;
-    color: rgb(65, 25, 102);
-    justify-content: space-evenly;
-
-   }
- 
-
 .header__h1{
-    grid-column: 1 / 3;
-    grid-row: 2 / 3;
-    align-content:center;
-    font-style:italic;
-    font-weight: bold;
-    font-size: 3rem;
-    padding-left: 25px;
+    color: blueviolet;
     text-align: center;
-}
-
-.audiojazz{
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
-    align-content:flex-end;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 15px;
 }
 
 .cuerpoprincipal{
@@ -96,8 +36,6 @@
 }
 
 .especialidades{
-    width: 100%;
-    height: 100%;
     padding-left: 25px;
     padding-right: 25px;
     display: grid;
@@ -266,9 +204,6 @@ label{
         .cuerpoprincipal{
             height:105vh;
         }
-        .header{
-            height: 25vh;
-        }
 
         .header__h1{
             font-size: 1.5rem;   
@@ -347,12 +282,7 @@ label{
     /*Seteo para pantalla 420px a 767px*/
     @media (min-width: 420px) and (max-width: 767px)
     {
-        .header{
-        height:15vh;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 20% 80%;
-        }
+  
 
         .header__h1{
         display: grid;
@@ -463,7 +393,7 @@ label{
         grid-column: 1/3;
         grid-row: 2/3;
         align-items: center;
-        padding-top: 45%;  
+        padding-top: 70%;  
         }
 
         textarea{
