--- a/css estilos/estilos.css
+++ b/css estilos/estilos.css
@@ -1,406 +1,293 @@
 *{
     list-style-type:none;
-    margin: 0%;
-    padding: 0%;
     text-decoration: none;
     box-sizing: border-box;
     overflow: auto;
     background-repeat: no-repeat;
-    font-family: 'Merienda', cursive;
     font-family: 'Ubuntu', sans-serif;
+    border: none;
+    margin: 0%;
+    padding: 0%;
 }
 
-header{
-    background-color: rgba(202, 180, 228, 0.829);
-}
-.header__h1{
-    color: blueviolet;
-    text-align: center;
-}
 
-.cuerpoprincipal{
-    height:110vh;
-    width: auto;
-    background-color: rgb(239, 236, 241);
-    background-image: url(../assets/Logo-\ sin\ fondo-IMA-01.png);
-    background-size:45% ;
-    background-position: center;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    grid-column: 1 / 4;
-    grid-row: 2 / 3;
-    align-items: center;
-    justify-content: stretch;
-    column-gap: 50px;
-}
+    #body{
+        background-image: linear-gradient(to bottom, #e6dae8, #ded2e1, #d6cada, #cec2d3, #c6bacc, #c5bacd, #c5bacd, #c4bace, #cac2d6, #d0c9de, #d7d1e6, #ddd9ee);
 
-.especialidades{
-    padding-left: 25px;
-    padding-right: 25px;
-    display: grid;
-    grid-column: 1/3;
-    grid-row: auto;
-    font-weight: bold;
-    font-size: 25px;
-    text-align: center;
-}
-
-.especialidades__lista{
-    display: grid;
-    justify-content: space-between;
-    align-content: center;
-    grid-template-areas:
-    "l1 l6" 
-    "l3 l4"
-    "l5 l2";
-}
-
-.seccionprincipal{
-    width: 100%;
-    height: 100%;
-    padding-left: 25px;
-    padding-right: 25px;
-    display: grid;
-    grid-column: 1/3;
-    font-weight: bold;
-    text-align: center;
-    grid-template-areas:
-    "encabezados encabezados"
-    "listas listas";
-}
-
-.listas{
-    display: grid;
-    grid-column: 1/3;
-    grid-row: 1 / 2;
-    grid-template-areas:
-    "ls1 ls3"
-    "ls2 ls4"
-    "ls5 ls6";
-   font-size: 15px;
-   color: rgb(88, 19, 153);
-   padding-top: 50px;
-   align-content: space-around;
-}
-.encabezados{
-    grid-column: 1/3;
-    grid-row: 1 / 2;
-    font-size: 30px;
-    color: rgb(179, 128, 202);
-    font-weight:bold;
-    text-align: center;
-    padding-top: 1.5rem;
     }
-    
-.titulosseccion{
-    font-size: 50px;
-    color: rgb(179, 128, 202);
-    font-weight:bold;
-    text-align: center;
-}
-
-.texto{
-    font-size: 30px;
-    color:rgba(166, 113, 197, 0.644);
-    text-align: center;
-    margin: 5px;
-    }
-
-.footer{ 
-    background-color: rgb(178, 174, 182);
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(74, 28, 117);
-    height:20vh;
-    display: grid;
-    grid-template-columns: 0.5fr 0.5fr 1fr;
-    grid-template-rows: auto;
-    grid-column: 1 / 4;
-    grid-row: 3 / 4;   
-    }
-
-.contacto{
-    width: 100%;
-    height: 100%;
-    padding-left: 25px;
-    padding-right: 25px;
-    display: grid;
-    grid-column: 1/3;
-    font-weight: bold;
-    text-align: center;
-    grid-template-areas:
-    "encabezados encabezados"
-    "fomulariodecontacto";
-    
-}
-
-.formulariodecontacto{
-    font-size: 1.5rem;
-    padding-top: 2.5rem;
-    } 
-
-input{
-    font-weight: bold;
-    color: rgb(43, 8, 83);
-    }
-    
-label{
-    font-weight: bold;
-    color: indigo;
-    }
-    
-.footer__mapa{
-    display:grid;
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    align-items: center;
-    padding-left: 5px;
-    }
-
-    
-.footer__tabla{
-    font-weight: bold;
-    color:rgb(41, 39, 39);
-    display:grid;
-    grid-column: 2/ 3;
-    grid-row: 1/2;
-    align-items: center;    
-    }
-    
-.redessociales{
-    display:grid;
-    grid-column: 3 / 4;
-    grid-row: 1/2;
-    }
-    
-.redessociales__enlaces{
-    display: flex;
-    font-weight: bold;
-    color: rgb(65, 25, 102);
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    }
-
-    /*Seteo para pantalla de 1158px a 1490px*/
-    @media (min-width:1158px) and (max-width: 1490px)
-    {
-
-       .header__h1{
-       font-size: 2rem;}
-
-       .footer__tabla{
-        font-size: 0.75rem;
-        } 
-    }
-
-    /*Seteo para pantalla 768px a 1157px*/
-    @media (min-width: 768px) and (max-width: 1157px)
-    {
-        .encabezados{
-            font-size: 1.5rem; 
-            }
-
-        .cuerpoprincipal{
-            height:105vh;
+    header{
+        background-image: linear-gradient(to right bottom, #bbb3be, #bbb2c0, #bbb0c3, #baafc5, #b9aec8, #b7abca, #b4a7cd, #b1a4cf, #ac9ed1, #a897d3, #a291d4, #9d8bd6);
+        font-style: italic;
         }
-
-        .header__h1{
-            font-size: 1.5rem;   
-        }
-
-        .footer{ 
-            background-color: rgb(178, 174, 182);
-            font-family:Verdana, Geneva, Tahoma, sans-serif;
-            height:20vh;
-            width: auto;
-            color: rgb(74, 28, 117);
-            height:20vh;
-            display: grid;
-            grid-column: 1 / 4;
-            grid-row: 3 / 4;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr 1fr;
-            }
-        .footer__tabla{
-            font-size: 0.6rem;
-            } 
-
-            .contacto{
-            width: 80%;
-            height: 100%;
-            display: grid;
-            grid-column: 1/3;
-            font-weight: bold;
-            text-align: center;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 0.5fr 1.5fr;
-            align-items: center;
-            align-content: center;
-            padding-bottom: 33%;
-            padding-left: 25%;
-            }
-
-            .formulariodecontacto{
-            display: grid;
-            grid-column: 1/3;
-            grid-row: 2/3;
-            align-items: center;
-            padding-top: 45%;  
-            }
-
-            textarea{
-            background-color: rgba(245, 245, 245, 0.075);
-            }
-
-            input{
-            background-color: rgba(245, 245, 245, 0.075);
-            }
-
-            .redessociales{
-            display:grid;
-            grid-column: 1 / 4;
-            grid-row: 2/2;
-            }
-
-            .redessociales__enlaces{
-            justify-content: space-around;
-            }
-
-            .listas{
-            align-content: space-around;
-            justify-content: space-between;
-            padding-top: 15%;  
-            }
-
-            .especialidades__lista{
-            display: grid;
-            align-content: space-around;
-            }
-    }
     
-    /*Seteo para pantalla 420px a 767px*/
-    @media (min-width: 420px) and (max-width: 767px)
-    {
-  
+    #header__h1{
+        color: #632e79d0;
+        font-style: italic;
+        font-weight: bold;
+    }
 
-        .header__h1{
+    #mainindex{
+        background-position: center;
         display: grid;
-        grid-column: 1/3;
-        grid-row: 2/3;
-        font-size:1.25rem;
-        justify-content: center;
+        grid-template-rows: auto;
         align-items: center;
-        padding-right: 20px;
-        }
+        overflow: hidden;
+        margin: auto;
 
-        .header__logo{
-        display: none !important; 
-       
-        }
+    }
 
-        .audiojazz{
-        display: none !important;        
-        }
-
-        .nav{
+    .firstseccion{
         display: grid;
-        grid-column: 1/3;
-        grid-row: 1/2;
-        align-content: space-around;
+    }
 
-        }
-        .footer{ 
-        height:25vh;
-        width: auto;
+    .secondseccion{
         display: grid;
-        grid-column: 1 / 4;
-        grid-row: 3 / 4;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        }
-
-        .footer__mapa{
-        display: none !important
-        }
-
-        .footer__tabla{
-         display: grid;
-         grid-column: 1 / 3;
-         grid-row: 1/ 2 ;
-         font-size: 0.6rem;
-         align-content: center;
-         justify-content: space-around;
-        }     
-
-        .redessociales{
-        display:grid;
-        grid-column: 1 / 3;
-        grid-row: 2/3;
-        }
+        padding-top: 20px;
+    }
+    .titulosseccion{
+        font-size: 3rem;
+        color: rgb(52, 38, 58);
+        font-weight:bold;
+        text-align: center;
+    }
     
-        .redessociales__enlaces{
-        justify-content: space-around;
+    .texto{
+        font-size: 2rem;
+        color:rgb(43, 2, 82);
+        text-align: center;
+        margin: 5px;
+        padding-bottom: 250px;
+
+    }
+
+    .texto2{
+        font-size: 2.5rem;
+        color:rgb(239, 236, 241);
+        text-align: center;
+        margin: 5px;
+        padding-bottom: 300px;
+
+    }
+
+    #encabezadoslabel1{
+     font-size: 2.5rem;
+     color: #502f5ef5;
+
+    }
+    
+    #encabezadoslabel2{
+        font-size: 3rem;
+        color:#a392aaf5 ;
+   
+       }
+    
+    .contacto{
+        padding: 50px;
+    }
+    #footermain{
+        background-image: linear-gradient(to right bottom, #bbb3be, #bbb2c0, #bbb0c3, #baafc5, #b9aec8, #b7abca, #b4a7cd, #b1a4cf, #ac9ed1, #a897d3, #a291d4, #9d8bd6);
+        color: #632e79d0;
+        padding-left: 25px;
+        padding-top: 5px;
+
+
+    }
+    .redessociales__enlaces{
+        display: flex;
+        font-weight: bold;
+        color: rgb(6, 0, 12);
+        justify-content:space-evenly;
+        align-items: center;
+        padding-top: 10px;
         }
+
+    #datoscontacto{
+        font-size: 1em;
+    }
+    
+    .carousel-inner{
+        height: 800px;
+        width:100%;
+        object-fit: cover;
+
+    }
+    
+
+    @media (min-width: 568px) and (max-width: 767px){
+
+
         
-        .titulosseccion{
+        #header__h1{
         font-size: 1.5rem;
         }
 
+        .titulosseccion{
+            font-size: 1.5rem;
+            }
+    
         .texto{
         font-size: 1rem;
         }
 
-        .especialidades__lista{
-         display: flex;
-         flex-direction: column;
-         justify-content: space-around;
+
+        #datoscontacto{
+            display:none !important; 
+
         }
 
-        img{
-        width:60px;
-        height: 60px;
-        }
 
-        .encabezados{
-        font-size: 1.5rem;
-        text-align:center;
+        .texto{
+            font-size: 1.5rem;
+            color:rgb(43, 2, 82);
+            text-align: center;
+            margin: 5px;
+            padding-bottom:300px;
+    
         }
-
-        .listas{
-        padding-top: 50%;
-        font-size: 0.8rem;
-        column-gap: 10px;
+    
+        .texto2{
+            font-size: 1.5rem;
+            color:rgb(130, 65, 184);
+            text-align: center;
+            margin: 5px;
+            padding-bottom: 600px;
+    
         }
+        
 
+        #tcardio{
+            padding-bottom: 50%;
+            padding-right: 25%;
+            font-weight: bold;
+        }
+    
+        #tcirugia{
+            padding-bottom: 50%;
+            padding-right: 25%;
+            font-weight: bold;
+        }
+    
+        #tendocrinología{
+            padding-bottom: 50%;
+            padding-right: 25%;  
+            font-weight: bold;
+        }
+        
+        #tgineco{
+            padding-bottom: 50%;
+            padding-right: 25%; 
+            font-weight: bold;
+        }
+        #tnut{
+            padding-bottom: 50%;
+            padding-right: 25%;  
+            font-weight: bold;
+        }
+    
+        #tpsico{
+            padding-bottom: 50%;
+            padding-right: 25%; 
+            font-weight: bold; 
+        }
+     
         .contacto{
-        width: 80%;
-        height: 100%;
-        display: grid;
-        grid-column: 1/3;
-        font-weight: bold;
-        text-align: center;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 0.5fr 1.5fr;
-        align-items: center;
-        align-content: center;
-        padding-bottom: 25%;
-        padding-left: 25%;
+            padding: 150x;
         }
 
-        .formulariodecontacto{
-        display: grid;
-        grid-column: 1/3;
-        grid-row: 2/3;
-        align-items: center;
-        padding-top: 70%;  
+        #mapa{
+            max-width: 50%;
+            max-height: 30%;
         }
+}
 
-        textarea{
-        background-color: rgba(245, 245, 245, 0.075);
-        }
+@media (min-width: 320px) and (max-width: 567px){
 
-        input{
-        background-color: rgba(245, 245, 245, 0.075);
-        }
+
+
+    #header__h1{
+    font-size: 1.5rem;
     }
+
+    .titulosseccion{
+        font-size: 1.5rem;
+        }
+
+    .texto{
+    font-size: 1rem;
+    }
+
+
+    #datoscontacto{
+        display:none !important; 
+
+    }
+
+
+    .texto{
+        font-size: 1rem;
+        color:rgb(43, 2, 82);
+        text-align: center;
+        margin: 5px;
+        padding-bottom: 300px;
+
+    }
+
+    .texto2{
+        font-size: 1rem;
+        color:rgb(130, 65, 184);
+        text-align: center;
+        margin: 5px;
+        padding-bottom: 600px;
+
+    }
+    
+    #tcardio{
+        padding-bottom: 75%;
+        padding-right: 25%;
+    }
+
+    #tcirugia{
+        padding-bottom: 75%;
+        padding-right: 25%;  
+    }
+
+    #tendocrinología{
+        padding-bottom: 75%;
+        padding-right: 25%;  
+    }
+    
+    #tgineco{
+        padding-bottom: 75%;
+        padding-right: 25%;  
+    }
+
+    #tnut{
+        padding-bottom: 75%;
+        padding-right: 25%;  
+    }
+
+    #tpsico{
+        padding-bottom: 75%;
+        padding-right: 25%;  
+    }
+
+    .card{
+        width: 150px;
+
+    }
+    .card-title{
+        font-size: 0.5rem;
+
+
+    }
+
+    .card-text{
+        font-size: 0.05rem;
+
+    }
+    
+    #mapa{
+        max-width: 50%;
+        max-height: 30%;
+    }
+}
