mediaqueries_segun_sass

--- a/css/main.css
+++ b/css/main.css
@@ -20,12 +20,22 @@ header {
     color: #632e79d0;
     font-style: italic;
     font-weight: bold; }
+    @media (min-width: 568px) and (max-width: 767px) {
+      header #header__h1 {
+        font-size: 1.5rem; } }
+    @media (min-width: 320px) and (max-width: 567px) {
+      header #header__h1 {
+        font-size: 1.25rem; } }
   header .header__nav {
     font-size: 1rem;
     color: #38276e; }
     header .header__nav .header__nav__logo {
       width: 75px;
       height: 75px; }
+      @media (min-width: 320px) and (max-width: 567px) {
+        header .header__nav .header__nav__logo {
+          width: 50px;
+          height: 50px; } }
 
 /*propiedades customizadas carrousel bootstrap*/
 .carousel-inner {
@@ -43,6 +53,20 @@ header {
     text-align: center;
     margin: 5px;
     padding-bottom: 250px; }
+    @media (min-width: 568px) and (max-width: 767px) {
+      .carousel-inner .carousel-inner__texto {
+        font-size: 1rem;
+        color: #2b0252;
+        text-align: center;
+        margin: 5px;
+        padding-bottom: 300px; } }
+    @media (min-width: 320px) and (max-width: 567px) {
+      .carousel-inner .carousel-inner__texto {
+        font-size: 1rem;
+        color: #2b0252;
+        text-align: center;
+        margin: 5px;
+        padding-bottom: 300px; } }
   .carousel-inner #carousel-inner__encabezado2 {
     font-size: 3rem;
     color: #a392aaf5; }
@@ -52,6 +76,20 @@ header {
     text-align: center;
     margin: 5px;
     padding-bottom: 300px; }
+    @media (min-width: 568px) and (max-width: 767px) {
+      .carousel-inner .carousel-inner__texto2 {
+        font-size: 1.5rem;
+        color: #8241b8;
+        text-align: center;
+        margin: 5px;
+        padding-bottom: 600px; } }
+    @media (min-width: 320px) and (max-width: 567px) {
+      .carousel-inner .carousel-inner__texto2 {
+        font-size: 1rem;
+        color: #8241b8;
+        text-align: center;
+        margin: 5px;
+        padding-bottom: 600px; } }
   .carousel-inner .carousel-inner__imagenes--especialidades {
     height: 800px; }
   .carousel-inner #carousel-inner__encabezado2--especialidades {
@@ -61,24 +99,60 @@ header {
     font-size: 3rem;
     color: #2f0341;
     font-weight: bold; }
+    @media (min-width: 568px) and (max-width: 767px) {
+      .carousel-inner #carousel-inner__encabezado2--especialidades {
+        padding-bottom: 50%;
+        padding-right: 25%;
+        font-weight: bold;
+        font-size: 2.5rem;
+        color: #2f0341;
+        font-weight: bold; } }
+    @media (min-width: 320px) and (max-width: 567px) {
+      .carousel-inner #carousel-inner__encabezado2--especialidades {
+        padding-bottom: 75%;
+        padding-right: 25%;
+        font-size: 1.5rem;
+        color: #2f0341;
+        font-weight: bold; } }
 
 /*propiedades de las cards de staff*/
 .card {
   margin-top: 10px;
   margin-bottom: 10px; }
+  @media (min-width: 568px) and (max-width: 767px) {
+    .card {
+      width: 138px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      overflow-x: hidden; } }
+  @media (min-width: 320px) and (max-width: 567px) {
+    .card {
+      width: 138px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      overflow-x: hidden; } }
 
 .card-title {
   text-align: center;
   color: #2f0341; }
+  @media (min-width: 320px) and (max-width: 567px) {
+    .card-title {
+      font-size: 0.5rem; } }
 
 .card-text {
   text-align: center;
   font-weight: bold; }
+  @media (min-width: 320px) and (max-width: 567px) {
+    .card-text {
+      font-size: 0.5rem; } }
 
 /*propiedades formulario de contacto*/
 .contacto {
   padding: 50px;
   color: #2f0341; }
+  @media (min-width: 568px) and (max-width: 767px) {
+    .contacto {
+      padding: 150x; } }
   .contacto .contacto__formulario {
     text-align: center; }
     .contacto .contacto__formulario .contacto__formulario--boton {
@@ -93,8 +167,22 @@ header {
   color: #632e79d0;
   padding-left: 25px;
   padding-top: 5px; }
+  .footer .footer__mapa {
+    max-width: 50%;
+    max-height: 30%; }
+    @media (min-width: 568px) and (max-width: 767px) {
+      .footer .footer__mapa {
+        max-width: 50%;
+        max-height: 30%; } }
+    @media (min-width: 320px) and (max-width: 567px) {
+      .footer .footer__mapa {
+        max-width: 50%;
+        max-height: 82px; } }
   .footer .footer__datoscontacto {
     font-size: 1em; }
+    @media (min-width: 320px) and (max-width: 767px) {
+      .footer .footer__datoscontacto {
+        display: none !important; } }
   .footer .footer__copyright {
     font-size: 1rem;
     color: #470864;
@@ -110,77 +198,3 @@ header {
   .redessociales .redessociales__imagenes {
     height: 30px;
     width: 30px; }
-
-@media (min-width: 568px) and (max-width: 767px) {
-  #header__h1 {
-    font-size: 1.5rem; }
-  .carousel-inner__texto {
-    font-size: 1rem; }
-  .carousel-inner__texto {
-    font-size: 1.5rem;
-    color: #2b0252;
-    text-align: center;
-    margin: 5px;
-    padding-bottom: 300px; }
-  .carousel-inner__texto2 {
-    font-size: 1.5rem;
-    color: #8241b8;
-    text-align: center;
-    margin: 5px;
-    padding-bottom: 600px; }
-  #carousel-inner__encabezado2--especialidades {
-    padding-bottom: 50%;
-    padding-right: 25%;
-    font-weight: bold;
-    font-size: 2.5rem;
-    color: #2f0341;
-    font-weight: bold; }
-  .card {
-    margin-top: 15px;
-    margin-bottom: 15px; }
-  .contacto {
-    padding: 150x; }
-  .footer__datoscontacto {
-    display: none !important; }
-  .footer__mapa {
-    max-width: 50%;
-    max-height: 30%; } }
-
-@media (min-width: 320px) and (max-width: 567px) {
-  #header__h1 {
-    font-size: 1.5rem; }
-  .header__nav__logo {
-    width: 50px;
-    height: 50px; }
-  .carousel-inner__texto {
-    font-size: 1rem;
-    color: #2b0252;
-    text-align: center;
-    margin: 5px;
-    padding-bottom: 300px; }
-  .carousel-inner__texto2 {
-    font-size: 1rem;
-    color: #8241b8;
-    text-align: center;
-    margin: 5px;
-    padding-bottom: 600px; }
-  #carousel-inner__encabezado2--especialidades {
-    padding-bottom: 75%;
-    padding-right: 25%;
-    font-size: 1.5rem;
-    color: #2f0341;
-    font-weight: bold; }
-  .card {
-    width: 138px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    overflow-x: hidden; }
-  .card-title {
-    font-size: 0.5rem; }
-  .card-text {
-    font-size: 0.5rem; }
-  .footer__datoscontacto {
-    display: none !important; }
-  .footer__mapa {
-    max-width: 50%;
-    max-height: 82px; } }
