--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,244 +1,11 @@
-@import "variables";
-
-*{
-    list-style-type:none;
-    text-decoration: none;
-    box-sizing: border-box;
-    overflow: auto;
-    background-repeat: no-repeat;
-    font-family: 'Ubuntu', sans-serif;
-    border: none;
-    margin: 0%;
-    padding: 0%;
-}
-
-
-    .body{
-        background-image: linear-gradient(to bottom, #e6dae8, #ded2e1, #d6cada, #cec2d3, #c6bacc, #c5bacd, #c5bacd, #c4bace, #cac2d6, #d0c9de, #d7d1e6, #ddd9ee);
-    }
-    /*propiedades header y componentes*/
-
-    header{
-        background-image:$HeaderGradientedefondo;
-        font-style: italic;
-        #header__h1{
-            color: #632e79d0;
-            font-style: italic;
-            font-weight: bold;
-           
-                @media (min-width: 568px) and (max-width: 767px){
-                font-size: 1.5rem;
-                }
-                @media (min-width: 320px) and (max-width: 567px){
-                font-size: 1.25rem;
-                }    
-            }
-        .header__nav{
-            font-size: 1rem;
-            color: #38276e;
-            .header__nav__logo{
-                width: 75px;
-                height: 75px;
-
-                @media (min-width: 320px) and (max-width: 567px){
-                width: 50px;
-                height: 50px;
-            }
-            }
-        }
-    }
-
-    /*propiedades customizadas carrousel bootstrap*/
-    
-    .carousel-inner{
-        height: 800px;
-        width:100%;
-        object-fit: cover;
-        .carousel-inner__imagenes{
-            height: 900px;
-        }
-        #carousel-inner__encabezado{
-            font-size: 3rem;
-            color: #502f5ef5;
-        }
-        .carousel-inner__texto{
-            font-size: 2rem;
-            color:rgb(43, 2, 82);
-            text-align: center;
-            margin: 5px;
-            padding-bottom: 250px;
-           
-            @media (min-width: 568px) and (max-width: 767px){
-                font-size: 1rem;
-                color:rgb(43, 2, 82);
-                text-align: center;
-                margin: 5px;
-                padding-bottom:300px;
-            }
-            @media (min-width: 320px) and (max-width: 567px){
-            font-size: 1rem;
-            color:rgb(43, 2, 82);
-            text-align: center;
-            margin: 5px;
-            padding-bottom: 300px;
-        }
-        }
-        #carousel-inner__encabezado2{
-            font-size: 3rem;
-            color:#a392aaf5 ;
-        }
-        .carousel-inner__texto2{
-            font-size: 2.5rem;
-            color:rgb(239, 236, 241);
-            text-align: center;
-            margin: 5px;
-            padding-bottom: 300px;
-            
-            @media (min-width: 568px) and (max-width: 767px){
-            font-size: 1.5rem;
-            color:rgb(130, 65, 184);
-            text-align: center;
-            margin: 5px;
-            padding-bottom: 600px;
-        }
-            @media (min-width: 320px) and (max-width: 567px){
-            font-size: 1rem;
-            color:rgb(130, 65, 184);
-            text-align: center;
-            margin: 5px;
-            padding-bottom: 600px;
-        }
-        }
-        .carousel-inner__imagenes--especialidades{
-            height: 800px;
-        }
-        #carousel-inner__encabezado2--especialidades{
-            padding-bottom: 30%;
-            padding-right: 25%; 
-            font-weight: bold;
-            font-size: 3rem;
-            color: #2f0341;
-            font-weight: bold;
-            
-            @media (min-width: 568px) and (max-width: 767px){
-            padding-bottom: 50%;
-            padding-right: 25%; 
-            font-weight: bold;
-            font-size: 2.5rem;
-            color: #2f0341;
-            font-weight: bold;     
-        }
-            @media (min-width: 320px) and (max-width: 567px){
-            padding-bottom: 75%;
-            padding-right: 25%; 
-            font-size: 1.5rem;
-            color: #2f0341;
-            font-weight: bold;  
-        } 
-       }
-    }
-    
-
-    /*propiedades de las cards de staff*/
-
-    .card{
-        margin-top: 10px;
-        margin-bottom: 10px;
-
-        @media (min-width: 568px) and (max-width: 767px){
-        width: 138px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        overflow-x: hidden;
-    }
-        @media (min-width: 320px) and (max-width: 567px){
-        width: 138px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        overflow-x: hidden;
-    }
-    }
- 
-    .card-title{
-        text-align: center;
-        color: #2f0341;
-        @media (min-width: 320px) and (max-width: 567px){
-        font-size: 0.5rem;
-        }
-    }
-
-    .card-text{
-       text-align: center;
-       font-weight: bold;
-       @media (min-width: 320px) and (max-width: 567px){
-       font-size: 0.5rem;
-        }
-    }
-
-    /*propiedades formulario de contacto*/
-    
-    .contacto{  
-        padding: 50px;
-        color: #2f0341;
-        @media (min-width: 568px) and (max-width: 767px){
-        padding: 150x;
-        }
-        .contacto__formulario{
-           text-align: center;
-           .contacto__formulario--boton{
-               color: #ffffff;
-               border-radius: 25%;
-               background-color: #511569;
-               overflow-x: hidden;
-           }
-        }
-    }
-
-    /*propiedades footer*/
-
-    .footer{
-        background-image: linear-gradient(to right bottom, #bbb3be, #bbb2c0, #bbb0c3, #baafc5, #b9aec8, #b7abca, #b4a7cd, #b1a4cf, #ac9ed1, #a897d3, #a291d4, #9d8bd6);
-        color: #632e79d0;
-        padding-left: 25px;
-        padding-top: 5px;
-        .footer__mapa{
-            max-width: 50%;
-            max-height: 30%;
-            
-            @media (min-width: 568px) and (max-width: 767px){
-                max-width: 50%;
-                max-height: 30%;
-            }
-           
-            @media (min-width: 320px) and (max-width: 567px){
-            max-width: 50%;
-            max-height: 82px;
-    }
-        }
-        .footer__datoscontacto{
-            font-size: 1em;    
-            @media (min-width: 320px) and (max-width: 767px){
-            display:none !important; 
-            }
-        }
-        .footer__copyright{
-            font-size: 1rem;
-            color: rgb(71, 8, 100);
-            border-top: solid #2f0341;   
-        }
-    }
-  
- 
-    .redessociales{
-        display: flex;
-        font-weight: bold;
-        color: rgb(6, 0, 12);
-        justify-content:space-evenly;
-        align-items: center;
-        padding-top: 10px;
-        .redessociales__imagenes{
-            height: 30px;
-            width: 30px;
-        }
-    }
-    
+@import "./abstracts/variables";
+@import "./abstracts/mixins";
+@import"./base/tipografías";
+@import "./base/reset";
+@import "./base/tipografías";
+@import "./layout/bbody";
+@import "./layout/header";
+@import "./layout/footer";
+@import "./componentes/carousel";
+@import "./componentes/tarjeta";
+@import "./componentes/formulariodecontacto";
